# Projekt-JiPP-2

JiPP-project/: CMakeLists.txt
JiPP-project/src/app/: Tui.cpp  Tui.h  main.cpp
JiPP-project/src/data/: Student.cpp  Student.h
JiPP-project/src/smartArray/: SmartArray.h
JiPP-project/tests/: CMakeLists.txt  tests.cpp
